# CheMPS2

./: .gitignore  .travis.yml  CASSCF_8cpp_source.html  CASSCF_8h_source.html  CASSCFdebug_8cpp_source.html  CASSCFhamiltonianrotation_8cpp_source.html  CASSCFnewtonraphson_8cpp_source.html  CHANGELOG  CHANGELOG.md  CITATIONS  CMakeLists.txt  CheMPS2Config.cmake.in  ConvergenceScheme_8cpp_source.html  ConvergenceScheme_8h_source.html  Correlations_8cpp_source.html  Correlations_8h_source.html  DIIS_8cpp_source.html  DIIS_8h_source.html  DMRGSCFVmatRotations_8cpp_source.html  DMRGSCFVmatRotations_8h_source.html  DMRGSCFindices_8cpp_source.html  DMRGSCFindices_8h_source.html  DMRGSCFintegrals_8cpp_source.html  DMRGSCFintegrals_8h_source.html  DMRGSCFmatrix_8cpp_source.html  DMRGSCFmatrix_8h_source.html  DMRGSCFoptions_8cpp_source.html  DMRGSCFoptions_8h_source.html  DMRGSCFunitary_8cpp_source.html  DMRGSCFunitary_8h_source.html  DMRGSCFwtilde_8cpp_source.html  DMRGSCFwtilde_8h_source.html  DMRG_8cpp_source.html  DMRG_8h_source.html  DMRGmpsio_8cpp_source.html  DMRGoperators_8cpp_source.html  DMRGtechnics_8cpp_source.html  Davidson_8cpp_source.html  Davidson_8h_source.html  Doxyfile  (+852 more)
CMake/: CheMPS2Config.cmake.in  FindTargetHDF5.cmake  FindTargetLAPACK.cmake
CheMPS2/: CASPT2.cpp  CASSCF.cpp  CASSCFdebug.cpp  CASSCFhamiltonianrotation.cpp  CASSCFnewtonraphson.cpp  CASSCFpt2.cpp  CITATIONS  CMakeLists.txt  ConjugateGradient.cpp  ConvergenceScheme.cpp  Correlations.cpp  Cumulant.cpp  DIIS.cpp  DMRG.cpp  DMRGSCFVmatRotations.cpp  DMRGSCFindices.cpp  DMRGSCFintegrals.cpp  DMRGSCFmatrix.cpp  DMRGSCFoptions.cpp  DMRGSCFrotations.cpp  DMRGSCFunitary.cpp  DMRGSCFwtilde.cpp  DMRGfock.cpp  DMRGmpsio.cpp  DMRGoperators.cpp  DMRGoperators3RDM.cpp  DMRGtechnics.cpp  Davidson.cpp  Doxyfile.in  EdmistonRuedenberg.cpp  Excitation.cpp  FCI.cpp  FourIndex.cpp  Hamiltonian.cpp  Heff.cpp  HeffDiagonal.cpp  HeffDiagrams1.cpp  HeffDiagrams2.cpp  HeffDiagrams3.cpp  HeffDiagrams4.cpp  (+39 more)
CheMPS2/include/: CASSCF.h  ConvergenceScheme.h  Correlations.h  DIIS.h  DMRG.h  DMRGSCFVmatRotations.h  DMRGSCFindices.h  DMRGSCFintegrals.h  DMRGSCFmatrix.h  DMRGSCFoptions.h  DMRGSCFunitary.h  DMRGSCFwtilde.h  Davidson.h  EdmistonRuedenberg.h  FCI.h  FourIndex.h  Gsl.h  Hamiltonian.h  Heff.h  Initialize.h  Irreps.h  Lapack.h  MyHDF5.h  Options.h  Problem.h  Sobject.h  SyBookkeeper.h  Tensor.h  TensorA.h  TensorB.h  TensorC.h  TensorD.h  TensorDiag.h  TensorF0.h  TensorF0Cbase.h  TensorF1.h  TensorF1Dbase.h  TensorGYZ.h  TensorK.h  TensorL.h  (+14 more)
CheMPS2/include/chemps2/: CASPT2.h  CASSCF.h  ConjugateGradient.h  ConvergenceScheme.h  Correlations.h  Cumulant.h  DIIS.h  DMRG.h  DMRGSCFVmatRotations.h  DMRGSCFindices.h  DMRGSCFintegrals.h  DMRGSCFmatrix.h  DMRGSCFoptions.h  DMRGSCFrotations.h  DMRGSCFunitary.h  DMRGSCFwtilde.h  Davidson.h  EdmistonRuedenberg.h  Excitation.h  FCI.h  FourIndex.h  Gsl.h  Hamiltonian.h  Heff.h  Initialize.h  Irreps.h  Lapack.h  MPIchemps2.h  Molden.h  MyHDF5.h  Options.h  Problem.h  Sobject.h  Special.h  SyBookkeeper.h  Tensor.h  Tensor3RDM.h  TensorA.h  TensorB.h  TensorC.h  (+21 more)
PyCheMPS2/: CMakeLists.txt  ConvScheme.pxd  Corr.pxd  DMRGSCF.pxd  DMRGSCFopt.pxd  DMRGsolver.pxd  FullCI.pxd  Ham.pxd  Init.pxd  Prob.pxd  PyCheMPS2.pyx  ReadinHamiltonianFCIDUMP.py  ReadinHamiltonianFCIDUMP.py.in  ReadinHamiltonianPsi4.py  ReadinHamiltonianPsi4.py.in  ThreeRDM.pxd  TwoRDM.pxd  setup.py  setup.py.in  test1.py.in  test2.py.in  test3.py.in  test4.py.in  test5.py.in  test6.py.in  test7.py.in  test8.py.in  test9.py.in
_sources/: index.txt  inoutput.txt  publications.txt  sourcecode.txt  symmetry.txt
documentation/: 2step_dmrgscf.tex
doxygen/: CASPT2_8cpp_source.html  CASPT2_8h_source.html  CASSCF_8cpp_source.html  CASSCF_8h_source.html  CASSCFdebug_8cpp_source.html  CASSCFnewtonraphson_8cpp_source.html  CASSCFpt2_8cpp_source.html  CHANGELOG_8md_source.html  ConjugateGradient_8cpp_source.html  ConjugateGradient_8h_source.html  ConvergenceScheme_8cpp_source.html  ConvergenceScheme_8h_source.html  Correlations_8cpp_source.html  Correlations_8h_source.html  Cumulant_8cpp_source.html  Cumulant_8h_source.html  DIIS_8cpp_source.html  DIIS_8h_source.html  DMRGSCFVmatRotations_8cpp_source.html  DMRGSCFVmatRotations_8h_source.html  DMRGSCFindices_8cpp_source.html  DMRGSCFindices_8h_source.html  DMRGSCFintegrals_8cpp_source.html  DMRGSCFintegrals_8h_source.html  DMRGSCFmatrix_8cpp_source.html  DMRGSCFmatrix_8h_source.html  DMRGSCFoptions_8cpp_source.html  DMRGSCFoptions_8h_source.html  DMRGSCFrotations_8cpp_source.html  DMRGSCFrotations_8h_source.html  DMRGSCFunitary_8cpp_source.html  DMRGSCFunitary_8h_source.html  DMRGSCFwtilde_8cpp_source.html  DMRGSCFwtilde_8h_source.html  DMRG_8cpp_source.html  DMRG_8h_source.html  DMRGfock_8cpp_source.html  DMRGmpsio_8cpp_source.html  DMRGoperators3RDM_8cpp_source.html  DMRGoperators_8cpp_source.html  (+1691 more)
mointegrals/: mointegrals.cc_PRINT  mointegrals.cc_SAVEHAM
psi4plugins/: dmrgci.cc  mointegrals.cc_PRINT  mointegrals.cc_SAVEHAM
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  (+58 more)
sphinx/: CMakeLists.txt  H2O.dmrgci.in  N2.caspt2.in  N2.fcidump.in  N2.savehdf.in  O2.dmrgscf.in  caspt2.rst  conf.py.in  dmrgscf.rst  dmrgscfcalcs.rst  handson.rst  index.rst  inoutput.rst  interfaces.rst  matrixelements.rst  method.rst  publications.rst  resources.rst  sourcecode.rst  symmetry.rst  tetracene.fcidump.in
tests/: CMakeLists.txt  test1.cpp  test1.cpp.in  test10.cpp  test10.cpp.in  test11.cpp.in  test12.cpp.in  test13.cpp.in  test14.cpp.in  test14.input  test15.cpp.in  test2.cpp  test2.cpp.in  test2.input  test3.cpp  test3.cpp.in  test4.cpp  test4.cpp.in  test5.cpp  test5.cpp.in  test6.cpp  test6.cpp.in  test7.cpp  test7.cpp.in  test8.cpp  test8.cpp.in  test9.cpp  test9.cpp.in
tests/matrixelements/: CH4.STO3G.FCIDUMP  CH4.sto3g.out  H2O.631G.FCIDUMP  H2O.631g.out  N2.CCPVDZ.FCIDUMP  N2.STO3G.FCIDUMP  N2.ccpvdz.out  N2.sto3g.out  O2.CCPVDZ.FCIDUMP  O2.ccpvdz.out
(+114 files in other folders)
